[package]
name = "zangfx"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[features]
default = []

[dependencies]
zangfx_base = { path = "src/base" }
zangfx_common = { path = "src/common" }

[target.'cfg(target_os="macos")'.dependencies]
zangfx_metal = { path = "src/backend/metal" }

[dev-dependencies]
ngsenumflags = { path = "../support/ngsenumflags" }