[package]
name = "xdispatch"
version = "0.1.4"
authors = ["yvt <i@yvt.jp>", "Steven Sheldon (author of 'dispatch')"]

description = "Use XDispatch without a hassle."
keywords = ["gcd"]
repository = "https://github.com/yvt/rust-xdispatch"
license = "MIT"

exclude = [
  ".gitignore",
  ".travis.yml",
  "travis_install.sh",
  "travis_test.sh",
  "tests-ios/**",
]

[dependencies]
xdispatch-core = { path = "../xdispatch-core", version = "0.1.0" }
