[package]
name = "ngsgamegfx_graph"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
arrayvec = "0.4.1"
atomic_refcell = "0.1.3"
cryo = { version = "0.1.2", features = ["parking_lot"] }
flags-macro = "0.1.2"
futures-preview = "0.3.0-alpha.12"
ngsgamegfx_common = { path = "../common" }
opaque_typedef = "0.0.4"
opaque_typedef_macros = "0.0.4"
owning_ref = "0.4.0"
parking_lot = "0.7"
xdispatch = { path = "../../../xdispatch/xdispatch" }
zangfx = { path = "../../../zangfx" }
