[package]
name = "ngspf_canvas"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
cgmath = "0.16.1"
unicode-bidi = "0.3.4"
xi-unicode = "0.1.0"
freetype = "0.4.0"
rgb = "0.8.9"
lazy_static = "1.1"
itertools = "0.7.8"
refeq = { path = "../../../support/refeq", features = ["nightly"] }
attrtext = { path = "../../../support/attrtext" }
raduga = { path = "../../../support/raduga" }
ngspf_core = { path = "../core" }

[dependencies.harfbuzz-sys]
git = "https://github.com/servo/rust-harfbuzz"
rev = "0abd7d7c91a2cd16e04c5813321239b457539891"

[dev-dependencies]
ttf-noto-sans = "0.1.1"
lipsum = "0.5.0"
