[package]
name = "ngspf_com"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ngsbase = { path = "../../../ngsbase" }
ngspf_core = { path = "../core" }
ngspf_viewport = { path = "../viewport" }
ngscom = { path = "../../../ngscom" }
lazy_static = "0.2"
atomic_refcell = "0.1.0"
cgmath = "0.15.0"
cggeom = { path = "../../../support/cggeom" }
stickylock = { path = "../../../support/stickylock" }
send-cell = "0.1.3"
rgb = "0.7.2"
tokenlock = { path = "../../../support/tokenlock" }
