[package]
name = "ngspf_com"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ngsbase = { path = "../../../ngsbase" }
ngspf_core = { path = "../core" }
ngspf_viewport = { path = "../viewport" }
ngspf_canvas = { path = "../canvas" }
ngscom = { path = "../../../ngscom" }
lazy_static = "1.0.1"
atomic_refcell = "0.1.0"
cgmath = "0.16.1"
cggeom = { path = "../../../support/cggeom" }
stickylock = { path = "../../../support/stickylock", features = ["stable_deref_trait"] }
send-cell = "0.1.3"
rgb = "0.8.9"
tokenlock = { path = "../../../support/tokenlock" }
arclock = { path = "../../../support/arclock", features = ["stable_deref_trait"] }
owning_ref = "0.3.3"
