[package]
name = "ngspf_viewport"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
winit = "0.15.0"
cgmath = "0.16.1"
rgb = "0.8.9"
include_data = { path = "../../../support/include_data" }
refeq = { path = "../../../support/refeq", features = ["nightly"] }
iterpool = { path = "../../../support/iterpool" }
ngsenumflags = { path = "../../../support/ngsenumflags" }
ngsenumflags_derive = { path = "../../../support/ngsenumflags/ngsenumflags_derive" }
cggeom = { path = "../../../support/cggeom" }
zangfx = { path = "../../../zangfx" }
ngspf_core = { path = "../core" }
ngspf_canvas = { path = "../canvas" }
xdispatch = { path = "../../../xdispatch" }
atomic_refcell = "0.1.0"

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.15"
objc = "0.2"
block = "0.1.5"

[target.'cfg(windows)'.dependencies]
user32-sys = "0.2.0"
winapi = "0.3.5"

[build-dependencies]
prebuild-glslang = { path = "../../../support/prebuild-glslang" }
