[package]
name = "ysr2_spatializer"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[features]
default = ["ngsterrain"]

[dependencies]
ysr2_common = { path = "../common" }
ysr2_filters = { path = "../filters" }
ngsterrain = { path = "../../../ngsterrain", optional = true }
cgmath = "0.15.0"
rand = "0.3.16"

[dev-dependencies]
clap = "2.26.0"
hound = "3.1.0"
