[package]
name = "zangfx_base"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
zangfx_common = { path = "../common" }
ngsenumflags = { path = "../../../support/ngsenumflags" }
ngsenumflags_derive = { path = "../../../support/ngsenumflags/ngsenumflags_derive" }
itervalues = { path = "../../../support/itervalues" }
itervalues_derive = { path = "../../../support/itervalues/itervalues_derive" }
lazy_static = "1.1"

[dependencies.query_interface]
git = "https://github.com/yvt/query_interface.git"
rev = "da91498339411afd6acd749353295dc57b9229b2"
