[package]
name = "zangfx_base"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
zangfx_common = { path = "../common" }
bitflags = "1.0.4"
itervalues = { path = "../../../support/itervalues" }
itervalues_derive = { path = "../../../support/itervalues/itervalues_derive" }
lazy_static = "1.1"
flags-macro = "0.1.2"

[dependencies.query_interface]
git = "https://github.com/yvt/query_interface.git"
rev = "da91498339411afd6acd749353295dc57b9229b2"
